# sqlx_serde

./: Cargo.toml  Justfile  README.md
examples/: query_enum.rs
src/: lib.rs
