[package]
name = "sqlx-pgrow-serde"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "serde-compatible newtype wrapper for sqlx::postgres::PgRow"
repository = "https://github.com/kurtbuilds/sqlx-pgrow-serde"
documentation = "https://docs.rs/sqlx-pgrow-serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2" }
sqlx-core = { version = "0.6.2" }
tokio = { version = "1.26.0", features = ["full"] }

[features]
json = ["sqlx/json"]
chrono = ["sqlx/chrono"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
sqlite = ["sqlx/sqlite", "sqlx-core/sqlite"]
postgres = ["sqlx/postgres", "sqlx-core/postgres"]
mysql = ["sqlx/mysql", "sqlx-core/mysql"]
uuid = ["sqlx/uuid"]
decimal = ["sqlx/decimal"]
