[package]
name = "sqlx-pgrow-serde"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "serde-compatible newtype wrapper for sqlx::postgres::PgRow"
repository = "https://github.com/kurtbuilds/sqlx-pgrow-serde"
documentation = "https://docs.rs/sqlx-pgrow-serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1" }
sqlx-core = { version = "0.7.1" }
tokio = { version = "1.29.1", features = ["full"] }

[features]
json = ["sqlx/json"]
chrono = ["sqlx/chrono"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
uuid = ["sqlx/uuid"]
decimal = ["sqlx/rust_decimal"]
